Security: Remove hardcoded credentials and update dependencies
- Replace hardcoded DB credentials with environment variables

- Add .env.example template for configuration

- Update .gitignore to exclude sensitive files

- Update pom.xml with correct Spring Boot dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Secrets & Local Config ###
+.env
+.env.local
+application-local.properties
+application-local.yml
+**/application-local.properties
+**/application-local.yml
